@@ -35,7 +35,7 @@ mb_class = Module::Build::StatProfiler
 [Prereqs]
 perl = 5.014
 File::Which = 0
-Template::Perlish = 0
+Text::MicroTemplate = 0
 File::ShareDir = 0
 parent = 0
 [Prereqs / TestRequires]
