@@ -1,3 +1,4 @@
+?  my %variables = %{$_[0]};
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="statprofiler.css">
@@ -10,21 +11,22 @@
         <th>Inclusive samples</td>
         <th>Subroutine</th>
       </tr>
-[% my $sub_link = $variables{sub_link};
-   for my $sub (@{$variables{subs}}) { %]
+<? my $sub_link = $variables{sub_link};
+   for my $sub (@{$variables{subs}}) {
+ ?>
       <tr>
-        <td>[%= $sub->{exclusive} %]</td>
-        <td>[%= $sub->{inclusive} %]</td>
+        <td><?= $sub->{exclusive} ?></td>
+        <td><?= $sub->{inclusive} ?></td>
         <td>
-          <a href="[%= $sub_link->($sub) %]">[%= $sub->{name} %]</a>
-[%   if ($sub->{kind} == 2) { %]
+          <a href="<?= $sub_link->($sub) ?>"><?= $sub->{name} ?></a>
+?    if ($sub->{kind} == 2) {
             (opcode)
-[%   } elsif ($sub->{kind} == 1) { %]
+?    } elsif ($sub->{kind} == 1) {
             (xsub)
-[%   } %]
+?    }
         </td>
       </tr>
-[% } %]
+?  }
     </table>
   </body>
 </html>
