@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+    - Switch to Text::MicroTemplate
+
 0.01      2014-09-01 20:49:35 CEST
 
     - First public release
